[gd_scene load_steps=9 format=3 uid="uid://cewebeurf2hqp"]

[ext_resource type="PackedScene" uid="uid://bmcbvbgvor4d3" path="res://UI/UI.tscn" id="1_mgneh"]
[ext_resource type="Script" path="res://Main/Main.gd" id="1_s62b8"]
[ext_resource type="Texture2D" uid="uid://bg41ximuiq3uj" path="res://Assets/Grass.png" id="2_kpoyc"]
[ext_resource type="PackedScene" uid="uid://cx56wmhce6ys3" path="res://BuildTile/Build_tile.tscn" id="3_oima4"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_sxfjl"]
texture = ExtResource("2_kpoyc")
0:0/0 = 0
1:0/0 = 0
1:0/0/probability = 0.5
2:0/0 = 0
2:0/0/probability = 0.05

[sub_resource type="TileSet" id="TileSet_5m8m7"]
sources/0 = SubResource("TileSetAtlasSource_sxfjl")

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_p6xeh"]
scenes/1/scene = ExtResource("3_oima4")

[sub_resource type="TileSet" id="TileSet_g0mjq"]
sources/0 = SubResource("TileSetScenesCollectionSource_p6xeh")

[node name="Main" type="Node2D"]
script = ExtResource("1_s62b8")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Grass" type="TileMap" parent="."]
texture_filter = 1
scale = Vector2(4, 4)
tile_set = SubResource("TileSet_5m8m7")
format = 2
layer_0/tile_data = PackedInt32Array(-327690, 0, 0, -262154, 0, 0, -196618, 0, 0, -131082, 0, 0, -65546, 65536, 0, -10, 0, 0, 65526, 0, 0, 131062, 0, 0, 196598, 0, 0, 262134, 0, 0, 327670, 65536, 0, 393206, 0, 0, -327689, 65536, 0, -262153, 0, 0, -196617, 65536, 0, -131081, 0, 0, -65545, 65536, 0, -9, 0, 0, 65527, 65536, 0, 131063, 65536, 0, 196599, 0, 0, 262135, 0, 0, 327671, 131072, 0, 393207, 65536, 0, -327688, 65536, 0, -262152, 65536, 0, -196616, 65536, 0, -131080, 65536, 0, -65544, 0, 0, -8, 131072, 0, 65528, 0, 0, 131064, 65536, 0, 196600, 65536, 0, 262136, 65536, 0, 327672, 0, 0, 393208, 0, 0, -327687, 65536, 0, -262151, 65536, 0, -196615, 0, 0, -131079, 0, 0, -65543, 0, 0, -7, 65536, 0, 65529, 0, 0, 131065, 0, 0, 196601, 0, 0, 262137, 65536, 0, 327673, 0, 0, 393209, 0, 0, -327686, 0, 0, -262150, 0, 0, -196614, 0, 0, -131078, 0, 0, -65542, 0, 0, -6, 0, 0, 65530, 65536, 0, 131066, 131072, 0, 196602, 65536, 0, 262138, 0, 0, 327674, 65536, 0, 393210, 0, 0, -327685, 0, 0, -262149, 0, 0, -196613, 0, 0, -131077, 0, 0, -65541, 0, 0, -5, 65536, 0, 65531, 65536, 0, 131067, 0, 0, 196603, 0, 0, 262139, 65536, 0, 327675, 65536, 0, 393211, 0, 0, -327684, 0, 0, -262148, 0, 0, -196612, 65536, 0, -131076, 65536, 0, -65540, 65536, 0, -4, 0, 0, 65532, 0, 0, 131068, 65536, 0, 196604, 65536, 0, 262140, 131072, 0, 327676, 0, 0, 393212, 0, 0, -327683, 131072, 0, -262147, 0, 0, -196611, 0, 0, 262141, 65536, 0, 327677, 0, 0, 393213, 65536, 0, -327682, 65536, 0, -262146, 0, 0, -196610, 65536, 0, 262142, 65536, 0, 327678, 0, 0, 393214, 0, 0, -327681, 0, 0, -262145, 0, 0, -196609, 0, 0, 262143, 65536, 0, 327679, 0, 0, 393215, 65536, 0, -393216, 65536, 0, -327680, 65536, 0, -262144, 65536, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, -393215, 0, 0, -327679, 0, 0, -262143, 131072, 0, 196609, 65536, 0, 262145, 0, 0, 327681, 0, 0, -393214, 0, 0, -327678, 0, 0, -262142, 0, 0, 196610, 65536, 0, 262146, 0, 0, 327682, 0, 0, -393213, 65536, 0, -327677, 65536, 0, -262141, 0, 0, -196605, 0, 0, -131069, 131072, 0, -65533, 0, 0, 3, 0, 0, 65539, 0, 0, 131075, 65536, 0, 196611, 65536, 0, 262147, 65536, 0, 327683, 0, 0, -393212, 65536, 0, -327676, 0, 0, -262140, 0, 0, -196604, 65536, 0, -131068, 0, 0, -65532, 65536, 0, 4, 65536, 0, 65540, 0, 0, 131076, 65536, 0, 196612, 0, 0, 262148, 0, 0, 327684, 65536, 0, -393211, 0, 0, -327675, 65536, 0, -262139, 0, 0, -196603, 0, 0, -131067, 0, 0, -65531, 0, 0, 5, 0, 0, 65541, 0, 0, 131077, 131072, 0, 196613, 0, 0, 262149, 65536, 0, 327685, 0, 0, -393210, 0, 0, -327674, 0, 0, -262138, 65536, 0, -196602, 0, 0, -131066, 65536, 0, -65530, 65536, 0, 6, 0, 0, 65542, 0, 0, 131078, 0, 0, 196614, 65536, 0, 262150, 0, 0, 327686, 0, 0, -393209, 0, 0, -327673, 0, 0, -262137, 0, 0, -196601, 65536, 0, -131065, 0, 0, -65529, 0, 0, 7, 0, 0, 65543, 65536, 0, 131079, 65536, 0, 196615, 0, 0, 262151, 0, 0, 327687, 0, 0, -393208, 65536, 0, -327672, 0, 0, -262136, 0, 0, -196600, 0, 0, -131064, 0, 0, -65528, 0, 0, 8, 65536, 0, 65544, 0, 0, 131080, 65536, 0, 196616, 0, 0, 262152, 65536, 0, 327688, 0, 0, -393207, 65536, 0, -327671, 131072, 0, -262135, 0, 0, -196599, 0, 0, -131063, 0, 0, -65527, 131072, 0, 9, 65536, 0, 65545, 65536, 0, 131081, 65536, 0, 196617, 0, 0, 262153, 0, 0, 327689, 65536, 0, -65539, 0, 0, -3, 65536, 0, 65533, 0, 0, 131069, 0, 0, 196605, 65536, 0, -131074, 0, 0, -65538, 65536, 0, -2, 0, 0, 65534, 0, 0, 131070, 65536, 0, 196606, 0, 0, -131073, 65536, 0, -65537, 65536, 0, -1, 0, 0, 65535, 0, 0, 131071, 65536, 0, 196607, 65536, 0, -196608, 65536, 0, -131072, 0, 0, -65536, 0, 0, 0, 65536, 0, 65536, 65536, 0, 131072, 0, 0, -196607, 0, 0, -131071, 65536, 0, -65535, 0, 0, 1, 0, 0, 65537, 0, 0, 131073, 0, 0, -196606, 65536, 0, -65534, 0, 0, 2, 0, 0, 65538, 131072, 0, 131074, 65536, 0, -131070, 0, 0, -131075, 0, 0)

[node name="Buildings" type="TileMap" parent="."]
scale = Vector2(4, 4)
tile_set = SubResource("TileSet_g0mjq")
format = 2
layer_0/tile_data = PackedInt32Array(-3, 0, 65536, 65533, 0, 65536, -65538, 0, 65536, -2, 0, 65536, 65534, 0, 65536, 131070, 0, 65536, -131073, 0, 65536, -65537, 0, 65536, -1, 0, 65536, 65535, 0, 65536, 131071, 0, 65536, 196607, 0, 65536, -196608, 0, 65536, -131072, 0, 65536, -65536, 0, 65536, 0, 0, 65536, 65536, 0, 65536, 131072, 0, 65536, -131071, 0, 65536, -65535, 0, 65536, 1, 0, 65536, 65537, 0, 65536, -65534, 0, 65536, 2, 0, 65536, 131069, 0, 65536, 196606, 0, 65536, 131073, 0, 65536, 65538, 0, 65536, -131070, 0, 65536, -196607, 0, 65536, -131074, 0, 65536, -65539, 0, 65536)

[node name="UI" parent="." instance=ExtResource("1_mgneh")]
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0

[connection signal="pressed" from="UI/Buttons/Town" to="." method="_on_town_pressed"]
[connection signal="pressed" from="UI/Buttons/Factory" to="." method="_on_factory_pressed"]
[connection signal="pressed" from="UI/Buttons/Silo" to="." method="_on_silo_pressed"]

[editable path="UI"]
